# KiroMLE-STAR

./: .gitignore  DOCUMENTATION.md  EARS_TASK_LIST.md  MEL-STAR Google Deepmind Research Paper.docx  MEL-STAR Google Deepmind Research Paper.txt  README.md  SECURITY_AUDIT.md  pyproject.toml  requirements.txt  run-all.bat  run-backend.bat  run-frontend.bat  run-tests.bat  setup.bat  start_agent.bat  ~$L-STAR Google Deepmind Research Paper.htm
.hypothesis/constants/: 0029e3685988a9e1  004e722d2b39195a  006b559781a41f7f  006d29edf1dcd5e3  016ea8820db8010c  0248e5eab696101a  0259594f63b2a1f6  025c876b6e0ab5a5  026551f7ae48804c  02decf39535a7340  031f85f1c11bb00b  039bd3df43b97cbd  03ab1e6e6bb21915  03d65cf548ce3b23  03fee8ff5d04aa33  041b82baf95116f0  04530f756c73f4ce  046ee8aeca9ebaea  047bf956bb38ba3b  0508012dc8a93663  0588a2471da78b21  0628f2618034526e  067138e1b3a4ebbd  06e5065547bcc6f6  07475514dc0bbadb  076bc773cb96ceb4  0799a57e5d15899f  07b8446a052edf99  07cbc26405169bc8  07d3cc9c2856c478  08d93ec5d0ff0314  096e9695fd18eafb  09ae28b390a241d0  09c4cce0f373044f  0a174ab092bdf149  0b1a4bdfddf6460d  0b242a4a768117e8  0b29e031fbeb4b22  0cfa12dfbf9e9abb  0d069835202bfa5d  (+872 more)
HelloAgent/: .bedrock_agentcore.yaml
MEL-STAR Google Deepmind Research Paper_files/: filelist.xml  header.htm
docs/: AGENT_PROMPTS.md  agent-workflows.html  architecture.html  deployment.html  functional-spec.html  index.html  prd.html  product-brief.html  technical-spec.html
frontend/: README.md  package-lock.json  package.json  tailwind.config.ts
scripts/: demo_pipeline.py
tests/: __init__.py
(+110 files in other folders)
